--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
 {
-  "version": "0.0.3",
-  "name": "gr.eworx.avAudioSessionAdapter"
+  "version": "1.0.0",
+  "name": "cordova-plugin-avaudiosession"
 }
