--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.0",
+  "version": "1.1.1",
   "name": "cordova-plugin-avaudiosession",
   "description": "Get and Set AVAudioSession information in iOS",
   "cordova": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TheBosZ/cordova-plugin-avaudiosession.git"
+    "url": "git+https://bitbucket.org/TheBosZ/cordova-plugin-avaudiosession.git"
   },
   "keywords": [
     "cordova",
@@ -23,7 +23,7 @@
   "author": "Nathan Kerr",
   "license": "Apache 2.0",
   "bugs": {
-    "url": "https://github.com/TheBosZ/cordova-plugin-avaudiosession/issues"
+    "url": "https://bitbucket.org/TheBosZ/cordova-plugin-avaudiosession/issues?status=new&status=open"
   },
-  "homepage": "https://github.com/TheBosZ/cordova-plugin-avaudiosession#readme"
+  "homepage": "https://bitbucket.org/TheBosZ/cordova-plugin-avaudiosession"
 }
