--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.2",
+  "version": "1.1.2+1",
   "name": "cordova-plugin-avaudiosession",
   "description": "Get and Set AVAudioSession information in iOS",
   "cordova": {
